# SPARC

./: .gitignore  .gitmodules  LICENSE  README.md
Documentation/: Code Documentation  README.md  readme.md
Documentation/Physics/: README.md
Documentation/Software/: readme.md
Source/: BeamSimulator.py  GUI.py  SPARC_phosphor.stl  SPARC_vacuum.stl  main.py  readme.txt
Source/3D Renderer/: readme.md
Source/Beam Simulator/: BeamSimulator.py
Source/Beam_Simulator/: BeamSimulator.py  readme.md
Source/C++ library/: CMakeLists.txt  README.md  Trajectory.h
Source/C++library/: CMakeLists.txt  README.md  SPARC.cpp  SPARC.h  Test.cpp  Trajectory.cpp  Trajectory.h  build_script.py
Source/C++library/VSbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Trajectory.sln  Trajectory.vcxproj  Trajectory.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Source/C++library/VSbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
Source/C++library/VSbuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Source/GUI/: GUI.py  README.md  SPARC_board.stl  SPARC_phosphor.stl  SPARC_vacuum.stl
Source/Mesh/: SPARC_vacuum_anode.stl  SPARC_vacuum_mount.stl
